# robomaster-simulator-fyp

./: Dockerfile
fyp_rl/: .gitignore  CMakeLists.txt  package.xml
fyp_rl/config/: robot_init.yaml
fyp_rl/launch/: evaluate_model.launch  start_training.launch
fyp_rl/scripts/: evaluate_model.py  multiAgentChallengeTaskEnv.py  robot_instance.py  robot_underlying.py  start_training.py
fyp_rl/src/: bullet_tf_broadcaster.cpp
obstacle_detector/launch/: nodelets.launch
particle_shooter/: CMakeLists.txt  package.xml
particle_shooter/models/particle_sphere/: model.sdf
particle_shooter/src/: collision_detector.cpp  particle_shooter_plugin.cpp
particle_shooter/worlds/: particle_shooter.world
realsense2_description/launch/: gazebo.launch
realsense2_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  test_d435_camera.urdf.xacro
ridgeback/ridgeback_control/config/: control.yaml
ridgeback/ridgeback_control/launch/: control.launch
ridgeback/ridgeback_description/urdf/: ridgeback.gazebo  (+2 more)
rm_simulator/: CMakeLists.txt  package.xml
rm_simulator/launch/: arena.launch  one_ridgeback.launch  one_rm_robot.launch  ridgeback_duel.launch  ridgeback_robots.launch
rm_simulator/rviz/: ridgeback_viz.rviz
rm_simulator/src/: ground_truth_tf2_broadcaster.cpp  refer_system.cpp  test.cpp  turret_controller.cpp
rm_simulator/worlds/: 2020Tag2.world  2020Tag3.world  2022.world  2022_rt.world
robot_teleop/launch/: keyboard_teleop.launch
teleop_twist_keyboard/: teleop_twist_keyboard.py
teleop_twist_keyboard/launch/: teleop0.launch  teleop1.launch  teleop2.launch  teleop3.launch
(+13 files in other folders)
